tshark incorrectly calculates tcp stream for some syn packets
This issue was migrated from bug 5743 in our old bug tracker.
Original bug information:
Reporter: Stefan
Status: RESOLVED FIXED
Product: Wireshark
Component: TShark
OS: Ubuntu
Platform: x86-64
Version: 1.5.x (Experimental)
Attachments:
test.cap: A reduced tcp dump containing just some syn and syn-ack packets to demonstrate the problem.