Fix for bug 5743 : tshark incorrectly calculates tcp stream for SYN packets when port numbers are re-used

svn path=/trunk/; revision=36162